--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     
     <div class="game-result"></div>
 
-    <script defer src="index.js"></script>
+    <script defer type="module" src="Game.js"></script>
+    <script defer type="module" src="index.js"></script>
 </body>
 </html>
